feat(auth): OAuth2User 구현체 구현
이후 유저 Principal 획득 시점에서 분기처리 방지 목적